Generate Pelican site

--- a/theme/css/sass/blog.scss
+++ b/theme/css/sass/blog.scss
@@ -1,7 +1,7 @@
 @import "vars.scss";
 
 html{
-    background-image: url(theme/img/bloody_paper.jpg);
+    background-image: url(/codapoc/theme/img/bloody_paper.jpg);
     background-size: cover;
     background-repeat-x: no-repeat;
     background-position-x: -100%;
