--- a/theme/css/blog.css
+++ b/theme/css/blog.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url(/theme/img/bloody_paper.jpg);
+  background-image: url(/codapoc/theme/img/bloody_paper.jpg);
   background-size: cover;
   background-repeat-x: no-repeat;
   background-position-x: -100%; }
